# Robot-Summit-XL

./: CMakeLists.txt  package.xml
src/: analyse_hardware.cpp  detection.cpp
src/outputs/: lspci.origin  lsusb.origin
src/white_lists/: class  serial  vendor
